Added composite unique key in forecast model. Added delete before add statement when querying forecast data. Added idea data to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ __pycache__
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
+.idea/**/BetterWeatherServer.iml
+.idea/**/misc.xml
 
 # Gradle:
 .idea/**/gradle.xml
