--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ __pycache__
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+.idea/BetterWeatherServer.iml
+.idea/misc.xml
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
