--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ venv/
 BetterWeather.egg-info/
 tests/testdata/test.db
 __pycache__
+betterweather/production.py
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -10,8 +11,6 @@ __pycache__
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
-.idea/**/BetterWeatherServer.iml
-.idea/**/misc.xml
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
