Fixed error in setup manifest regarding the location of static files.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-recursive-include yourapplication/templates *
-recursive-include yourapplication/static *
+recursive-include betterweather/templates *
+recursive-include betterweather/static *
